<?xml version="1.0"?>
<package format="3">
  <name>robot_teleop</name>
  <version>0.0.1</version>
  <description>F710 gamepad teleop bridge to Arduino</description>
  <maintainer email="you@email.com">you</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>